--- a/layouts/partials/header/inner.html
+++ b/layouts/partials/header/inner.html
@@ -1,4 +1,4 @@
 <div class="inner">
-	{{ partial "header/nav.html" . }}
+	{{ partial "header/custom-header.html" . }}
 	{{ if eq .Site.Params.Menu_main true }}{{ partial "header/nav.html" . }}{{ end }}
 </div>
