renamed assets according to theme

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,7 +1,7 @@
 <script src="{{ "/scripts/jquery.min.js" | relURL }}" data-no-instant></script>
 <script async src="{{ "/scripts/fancybox/jquery.fancybox.min.js" | relURL }}"></script>
 
-<script async src="{{ "/scripts/jquery.argil.js" | relURL }}"></script>
+<script async src="{{ "/scripts/jquery.onionskin.js" | relURL }}"></script>
 
 <script async src="{{ "/scripts/leader-line.min.js" | relURL }}" ></script>
 
