--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /*--------------------------------------------------------------
-argil theme
+onionskin theme
 made by: Heacles Papatheodorou
-url: https://heracl.es/argil
+url: https://heracl.es/onionskin
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
