--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -37,44 +37,47 @@
 				</div>
 			{{ if ne .Params.Meta_display false -}}
 				<aside class="meta">
-					<h2>{{ (i18n "metadata") }}</h2>
-					<dl>
-					<!-- {{ with .Params.description }}
-						<dt>{{ i18n "description" }}</dt>
-						<dd>{{ . | markdownify }}</dd>
-					</dd>
-					{{ end }} -->
-					{{ if .Params.dateCreated }}
-						<dt>{{ i18n "produced" }}</dt><dd>{{ .Params.dateCreated }}</dd>
-					{{ else }}
-						<dt>{{ i18n "published" }}</dt><dd>{{ .Date.Format "2006-01-02" }}</dd>
-					{{ end }}
+					<div class="wrapper">
+						<h2>{{ (i18n "metadata") }}</h2>
+						<dl>
+						<!-- {{ with .Params.description }}
+							<dt>{{ i18n "description" }}</dt>
+							<dd>{{ . | markdownify }}</dd>
+						</dd>
+						{{ end }} -->
+						{{ if .Params.dateCreated }}
+							<dt>{{ i18n "produced" }}</dt><dd>{{ .Params.dateCreated }}</dd>
+						{{ else }}
+							<dt>{{ i18n "published" }}</dt><dd>{{ .Date.Format "2006-01-02" }}</dd>
+						{{ end }}
 
-					{{ if (lt (add .Date.Unix 63072000) now.Unix) }}
-						{{ $yearsElapsed := ( sub (int (now.Format "2006")) (int (.Date.Format "2006")) ) }}
-						<dd span class="time">{{ $yearsElapsed }} {{ i18n "notice-outdated" | safeHTML }}</dd>
-					{{ end }}
+						{{ if (lt (add .Date.Unix 63072000) now.Unix) }}
+							{{ $yearsElapsed := ( sub (int (now.Format "2006")) (int (.Date.Format "2006")) ) }}
+							<dd span class="time">{{ $yearsElapsed }} {{ i18n "notice-outdated" | safeHTML }}</dd>
+						{{ end }}
 
-					{{ with .Params.license }}
-						<dt>{{ i18n "license" }}</dt>
-						<dd>{{ . | markdownify }}</dd>
-					</dd>
-					{{ end }}
+						{{ with .Params.license }}
+							<dt>{{ i18n "license" }}</dt>
+							<dd>{{ . | markdownify }}</dd>
+						</dd>
+						{{ end }}
 
-					{{ if .Params.Tags }}
-						<dt>{{ i18n "tags" }}</dt>
-						<dd>{{ range .Params.Tags -}}
-							<a href="/tags/{{ . | urlize }}" class="tag" rel="tag">{{ (i18n . ) }}</a>
-						{{- end }}</dd>
-					{{ end }}
-					</dl>
-					{{ with .Params.Meta }}
-						{{ . | markdownify }}
-					{{ end }}
-
+						{{ if .Params.Tags }}
+							<dt>{{ i18n "tags" }}</dt>
+							<dd>{{ range .Params.Tags -}}
+								<a href="/tags/{{ . | urlize }}" class="tag" rel="tag">{{ (i18n . ) }}</a>
+							{{- end }}</dd>
+						{{ end }}
+						</dl>
+						{{ with .Params.Meta }}
+							{{ . | markdownify }}
+						{{ end }}
+					</div>
 					{{ if ge (len .TableOfContents) 150 }}
+					<div class="wrapper">
 						<h2>{{ (i18n "contents") }}</h2>
 						{{.TableOfContents}}
+					</div>
 					{{ end }}
 				</aside>
 			{{- end }}
