--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -6,6 +6,7 @@
 {{ $lang := .Site.Language.Lang }}
 <section class="articles-list {{ with $class }}{{ $class }}{{ end }}">
 <h2>{{ $title }}</h2>
+<div class="wrapper">
 {{- range .Site.AllPages -}}
 	{{- if and (and (or (in $types .Type) (in .Params.tags $tag)) (eq .IsPage true)) (not (in .Params.tags $filter)) -}}
 		{{- if (or (eq .Lang $lang) .Params.Crosspost) -}}
@@ -13,4 +14,5 @@
 		{{- end -}}
 	{{- end -}}
 {{- end -}}
+</div>
 </section>
