--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -3,8 +3,9 @@
 {{ $filter := (.Get "filter") }}
 {{ $class := (.Get "class") }}
 {{ $title := (.Get "title") }}
+{{ $closed := (.Get "closed") }}
 {{ $lang := .Site.Language.Lang }}
-<details class="articles-list {{ with $class }}{{ $class }}{{ end }}" open>
+<details class="articles-list {{ with $class }}{{ $class }}{{ end }}" {{ if ne $closed "true" }}open{{ end }}>
 <summary><h2>{{ $title }}</h2></summary>
 <div class="wrapper">
 {{- range .Site.AllPages -}}
